Fix flag sizing in detail view on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -148,13 +148,21 @@ h1 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 4rem;
+  column-gap: 4rem;
   align-items: center;
   padding: 2rem;
 }
+.info-detail {
+  width: 100%;
+  max-width: 36rem;
+}
 
 .country-flag-detail{
-  max-width: 48rem;
+  max-width: 36rem;
+  width: 100%;
+}
+.info-detail p {
+
 }
 
 button {
